[package]
name = "krsos"
version = "0.1.0"
authors = ["Kevin Smith <krsjunk@netscape.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.16"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"